--- a/mypos/package.json
+++ b/mypos/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.14",
     "fire": "^0.55.1",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.3",
     "serialize-javascript": "^2.1.2",
     "sweetalert2": "^9.5.3",
     "tslib": "^1.10.0",
