--- a/mypos_api/appsettings.Development.json
+++ b/mypos_api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionSQLServer": "Server=192.168.43.91,1112;database=cmpos;user id=sa;password=Tel1234!;"
+    "ConnectionSQLServer": "Server=localhost,1112;database=cmpos;user id=sa;password=Tel1234!;"
   },
   "Jwt": {
     "Key": "iBlurBlurASP.DOTNETCORE555",
